--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+@keyframes spin{
+    0% {rotation: 0deg;}
+    50% {rotation: 180deg;}
+    100% {rotation: 360deg;}
+}
 body{
     background-color: chartreuse;
+}
+img {
+    height: 200px;
+    width: 400px;
+}
+img.hover{
+    animation-name: spin 20s linear 0s infinite alternate;
 }
